@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-06-27T01:25:38Z",
+  "timestamp" : "2025-06-28T01:22:53Z",
   "count_outdated" : 1867,
   "uniques_outdated" : 1107,
-  "count" : 1877,
-  "uniques" : 1116,
+  "count" : 1879,
+  "uniques" : 1118,
   "clones" : [
     {
       "timestamp": "2025-06-18T00:00:00Z",
@@ -67,6 +67,24 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-06-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-06-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
