@@ -1,5 +1,5 @@
 {
-  "count": 10,
+  "count": 12,
   "uniques": 5,
   "clones": [
     {
@@ -36,6 +36,16 @@
       "timestamp": "2025-06-26T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-06-27T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-06-28T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
