@@ -1,3 +1,12 @@
+2025-06-28T01:22:53Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15938945901 # 688
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-28
+* notice: last 14d: unq all: 5 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 1107 1867 / 1116 1877
+* notice: next accum: outdated-unq outdated-all / unq all: 1107 1867 / 1118 1879
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-06-27 2025-06-28]
+
 2025-06-27T01:25:38Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15916007922 # 687
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-27
